  the set of variable branchings that were performed in the parent node / all ancestor nodes to create a given node
- new methods SCIPgetVarConflictlengthScore(), SCIPgetVarAvgConflictlength(), SCIPgetAvgConflictlengthScore() and their pendants for the 
  current run
- new (advanced) parameter <reading/opbreader/nlcenforced> in reader_opb.c to influence the enforce flag of the "and" constraints

features:
- adjusted hard memory limit to (soft memory limit)*1.1 + 100mb in check.sh, checkcount.sh, check_cplex.sh, check_cluster.sh and check_cbc.sh
- new interface to QSopt due to Daniel Espinoza
- new reader for reading and writing FlatZinc models
- new presolving step in cons_knapsack.c, same like "simplifyinequalities" in cons_linear.c
- each variable has now two additional Bool parameter which determine whether the lower or upper bound are lazy; lazy means 
  that there exists a constraint which implies this bound. Variable bounds which are marked as lazy are not in the LP. These 
  parameters are set to FALSE in default which yields the same behavior as before. With the methods SCIPvarMarkLazyLb() and 
  SCIPvarMarkLazyUb() these parameters can be set to TRUE. (This of interest if SCIP gets used as a
  branch-and-price framework).
- added new timing point, SCIP_HEURTIMING_DURINGPRICINGLOOP, for calling heuristics; If this timing point is used the corresponding 
  heuristics is called during the pricing loop of variables; we also added this timing point to heur_simplerounding.{h,c} which
  has the effect that a LP solution which satisfies all integrality conditions during the pricing loop is detected
- extended hybrid relpscost branching rule by usage of the average length of conflicts a variable appears in

performance improvements:
- replaced some function calls in loop conditions
- in sepa_cmir.c, if mksetcoefs is invalid for delta=1 no other values of delta are tested anymore
- changed the timing of the feasibility pump in case of pricing

fixed bugs: